# Rambler---Python

./: README.md  main.py  pyproject.toml  tech_sandbox.py
Rambler - Text_adventure_game/: Project_task_list.txt  SaveEvent.py  event_data_test.py  get_next_number_test.py  persist_event.py
data/: eventdata.json
docs/: Project_task_list.txt
src/: Exceptions.py  SaveEvent.py  TextEvent.py  constants.py  devtesting.py  persist_event.py  tech_sandbox.py
src/Commands/: Attack.py  Command.py
src/Layers/: Buttons.py  UIConstants.py
src/Mode/: GameEventManager.py  GamePlayer.py  text
src/Screens/: Buttons.py  CharSelect.py  Figth.py  MainMenu.py  Screens.py  Utils.py
src/State/: Character.py  Gamestate.py  PlayerCharacter.py
src/TextEvents/: TextEvent.py  constants.py
src/TextEvents/test/: text_TextEvent.py
test/: SaveEvent_test.py  event_data_test.py  get_next_number_test.py  text_TextEvent.py
