[project]
name = "Rambler"
version = "0.0.1"
authors = [
  { name="Emil Kongsgaard", email="ebkoprivat@outlook.dk" },
]
description = "A text based game"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Emil-Kongsgaard/Rambler---Python"
Issues = "https://github.com/Emil-Kongsgaard/Rambler---Python/issues"